--- a/client/package.json
+++ b/client/package.json
@@ -3,39 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@fortawesome/fontawesome-free": "^6.4.0",
-    "@mui/icons-material": "^5.10.6",
-    "@mui/material": "^5.10.8",
-    "@mui/x-date-pickers": "^5.0.13",
-    "@mui/x-date-pickers-pro": "^5.0.13",
-    "@react-oauth/google": "^0.9.0",
-    "@reduxjs/toolkit": "^1.9.0",
-    "@testing-library/jest-dom": "^5.16.5",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
+    "@mui/x-date-pickers": "^5.0.20",
+    "@mui/x-date-pickers-pro": "^5.0.20",
+    "@react-oauth/google": "^0.9.1",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.1.3",
+    "axios": "^1.7.6",
     "dotenv": "^10.0.0",
-    "firebase": "^9.13.0",
+    "firebase": "^9.23.0",
     "gh-pages": "^4.0.0",
     "jwt-decode": "^3.1.2",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-cookie": "^4.1.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-file-image-to-base64": "^1.0.1",
-    "react-otp-input": "^3.0.0",
-    "react-redux": "^8.0.5",
-    "react-responsive-masonry": "^2.1.7",
-    "react-router-dom": "^6.4.2",
-    "react-scripts": "5.0.1",
-    "redux": "^4.2.0",
+    "react-otp-input": "^3.1.1",
+    "react-redux": "^8.1.3",
+    "react-responsive-masonry": "^2.3.0",
+    "react-router-dom": "^6.26.1",
+    "react-scripts": "^5.0.1",
+    "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
-    "styled-components": "^5.3.6",
+    "styled-components": "^5.3.11",
     "timeago.js": "^4.0.2",
-    "validator": "^13.7.0",
+    "validator": "^13.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
